--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+.App
+{
+    background-color: rgb(0, 0, 49);
+} 
+
+.h-100v
+{
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.border-point
+{
+    border: 1px solid white;
+    border-radius: 50%;
+    width: 5px;
+    height: 5px;
+    padding: 1%;
+    margin-right: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.white-underline
+{
+    width: 100px;
+    height: 1px;
+    background-color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.progress 
+{
+    background-color: rgb(0, 0, 49);
 }
 
-.App-link {
-  color: #61dafb;
+.w-20 
+{
+    width: 20%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Footer */
+
+.text-box > input , .text-box > textarea{
+    border: none
+}
+
+.text-box > input:focus , .text-box > textarea {
+    outline: none;
+}
+
+/* LandingPage */
+.responsive-border
+{
+    width: 75%;
+    @media only screen and (min-width: 600px)
+    {
+        width: 50%;
+    }
+    @media only screen and (min-width: 992px)
+    {
+        width: 25%;
+    }
+    
+}
+
+.highlight-color
+{
+    color: #bfcfff;
+}
+
+.second-color
+{
+    background-color: #809fff;
+}
+
+.third-color
+{
+    background-color: #bfcfff;
 }
